# catastrofe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
catastrofe/: __init__.py  cli.py  csv_exporter.py  xml_splitter.py
