[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-splitter"
version = "1.0.0"
description = "Eina per dividir fitxers XML grans en parts més petites"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
catastrofe = "catastrofe.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["catastrofe*"]
